src/objects/QIRS_MCAR__c.object
<CustomObject>
    <fields>
        <fullName>MCAR_Code__c</fullName>
        <inlineHelpText>Only numeric value</inlineHelpText>
        <label>MCAR Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for MCAR Number</description>
        <label>MCAR - ID</label>
        <referenceTo>MCAR__c</referenceTo>
        <relationshipLabel>MCAR</relationshipLabel>
        <relationshipName>MCAR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIRS__c</fullName>
        <label>QIRS</label>
        <referenceTo>QIRS__c</referenceTo>
        <relationshipName>MCAR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MCAR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>MCAR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Corrective Action Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>QIRS_MCAR_Numeric_validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF( !ISNUMBER( MCAR_Code__c ) , true, false)</errorConditionFormula>
        <errorDisplayField>MCAR_Code__c</errorDisplayField>
        <errorMessage>Enter numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Status_Validation_for_MCAR</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( QIRS__r.Status__c , &apos;Closed&apos;) ||
ISPICKVAL( QIRS__r.Status__c , &apos;Submited to Master Approval&apos;) , true, false)</errorConditionFormula>
        <errorMessage>Cannot add MCAR as status of QIRS is either &quot;Closed&quot; or &quot;Submitted to Master Approval&quot;.</errorMessage>
    </validationRules>
</CustomObject>